[gd_scene load_steps=6 format=3 uid="uid://cfymk32awtlp4"]

[ext_resource type="Script" path="res://code/ui_elements/btn_option.gd" id="1_2lqmy"]
[ext_resource type="Theme" uid="uid://d108udwkttr07" path="res://art/themes/t_option_btn.tres" id="1_jb38e"]
[ext_resource type="Texture2D" uid="uid://cqoo0bwt1xi6c" path="res://art/icons/option_arrow.png" id="4_xkfor"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1b0ii"]
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.592157, 0.619608, 0.74902, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k4o6r"]
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 0.807843, 0.317647, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="Option" type="OptionButton"]
custom_minimum_size = Vector2(300, 42)
offset_right = 300.0
offset_bottom = 42.0
theme = ExtResource("1_jb38e")
text_overrun_behavior = 1
item_count = 1
selected = 0
fit_to_longest_item = false
popup/item_0/text = "New Item"
popup/item_0/id = 0
script = ExtResource("1_2lqmy")

[node name="OptionArrowD" type="Sprite2D" parent="."]
modulate = Color(0.592157, 0.619608, 0.74902, 1)
position = Vector2(280, 21)
rotation = 1.5708
texture = ExtResource("4_xkfor")

[node name="OptionArrowP" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 0.807843, 0.317647, 1)
position = Vector2(279, 21)
rotation = -1.5708
texture = ExtResource("4_xkfor")

[node name="Stroke" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1b0ii")

[node name="StrokeFocus" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_k4o6r")

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="toggled" from="." to="." method="_on_toggled"]
